adding index and css of main workbook

--- a/index.html
+++ b/index.html
@@ -1,10 +1,108 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>Hello world!</h1>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
+  <title>Neil Cho Main</title>
+</head>
+<body>
+  <header>
+    <h1>Neil Cho Main</h1>
+  </header>
+  <div class="weekly__projects">
+    <ul class="week__overview">
+      <li class="week__item">
+        <a class="item__overlay" href="https://neilcho.github.io/web-workbook/01week/resume"></a>
+        <iframe src="https://neilcho.github.io/web-workbook/01week/resume" frameborder="0" width: 100%></iframe>
+      <div class="project__meta">
+        <h3>
+          <a href="https://neilcho.github.io/web-workbook/01week/resume">Week01: Resume</a>
+        </h3>
+      </div>
+      </li>
+      <li class="week__item">
+        <a class="item__overlay" href="https://neilcho.github.io/web-workbook/02week/bio"></a>
+        <iframe src="https://neilcho.github.io/web-workbook/02week/bio" frameborder="0"></iframe>
+      <div class="project__meta">
+        <h3>
+          <a href="https://neilcho.github.io/web-workbook/02week/bio">Week02: Bio</a>
+        </h3>
+      </div>
+      </li>
+      <li class="week__item">
+        <a class="item__overlay" href="https://neilcho.github.io/web-workbook/03week/airplane"></a>
+        <iframe src="https://neilcho.github.io/web-workbook/03week/airplane" frameborder="0"></iframe>
+      <div class="project__meta">
+        <h3>
+          <a href="https://neilcho.github.io/web-workbook/03week/airplane">Week03: Airplane</a>
+        </h3>
+      </div>
+      </li>
+      <li class="week__item">
+        <a class="item__overlay" href="https://neilcho.github.io/web-workbook/04week/nasa"></a>
+        <iframe src="https://neilcho.github.io/web-workbook/04week/nasa" frameborder="0"></iframe>
+      <div class="project__meta">
+        <h3>
+          <a href="">Week04: NASA</a>
+        </h3>
+      </div>
+      </li>
+      <li class="week__item">
+        <a class="item__overlay" href="https://neilcho.github.io/web-workbook/04week/tomorrows-technology"></a>
+        <iframe src="https://neilcho.github.io/web-workbook/04week/tomorrows-technology" frameborder="0"></iframe>
+      <div class="project__meta">
+        <h3>
+          <a href="https://neilcho.github.io/web-workbook/04week/tomorrows-technology">Week04: Tomorrow's Technology</a>
+        </h3>
+      </div>
+      </li>
+      <li class="week__item">
+        <a class="item__overlay" href="https://neilcho.github.io/web-workbook/04week/welcome-to-our-site"></a>
+        <iframe src="https://neilcho.github.io/web-workbook/04week/welcome-to-our-site" frameborder="0"></iframe>
+      <div class="project__meta">
+        <h3>
+          <a href="https://neilcho.github.io/web-workbook/04week/welcome-to-our-site">Week04: Welcome-to-our-Site </a>
+        </h3>
+      </div>
+      </li>
+      <li class="week__item">
+        <a class="item__overlay" href="https://neilcho.github.io/web-workbook/05week/travel-gram"></a>
+        <iframe src="https://neilcho.github.io/web-workbook/05week/travel-gram" frameborder="0"></iframe>
+      <div class="project__meta">
+        <h3>
+          <a href="https://neilcho.github.io/web-workbook/05week/travel-gram">Week05: Travel Gram</a>
+        </h3>
+      </div>
+      </li>
+      <li class="week__item">
+        <a class="item__overlay" href="https://neilcho.github.io/web-workbook/05week/transitions-and-transformations"></a>
+        <iframe src="https://neilcho.github.io/web-workbook/05week/transitions-and-transformations" frameborder="0"></iframe>
+      <div class="project__meta">
+        <h3>
+          <a href="https://neilcho.github.io/web-workbook/05week/transitions-and-transformations">Week 05: Transitions-and-Transformations</a>
+        </h3>
+      </div>
+      </li>
+      <li class="week__item">
+        <a class="item__overlay" href="https://neilcho.github.io/web-workbook/checkpoint-one"></a>
+        <iframe src="https://neilcho.github.io/web-workbook/checkpoint-one" frameborder="0"></iframe>
+      <div class="project__meta">
+        <h3>
+          <a href="https://neilcho.github.io/web-workbook/checkpoint-one">Checkpoint-One</a>
+        </h3>
+      </div>
+      </li>
+      <li class="week__item">
+        <a class="item__overlay" href="https://neilcho.github.io/web-workbook/05week/grid-project"></a>
+        <iframe src="https://neilcho.github.io/web-workbook/05week/grid-project" frameborder="0"></iframe>
+      <div class="project__meta">
+        <h3>
+          <a href="https://neilcho.github.io/web-workbook/05week/grid-project">Grid-Project</a>
+        </h3>
+      </div>
+      </li>
+    </ul>
+  </div>
+</body>
 </html>
