--- a/05week/grid-landing-page/grid-landing-page.html
+++ b/05week/grid-landing-page/grid-landing-page.html
@@ -32,7 +32,7 @@
         <div class="item-13">
             <div class="line"></div>
             <h2> 50% SALE</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            <p>Lorem dolor sit amet, consectetur adipiscing elit, 
               sed do eiusmod tempor incididunt ut labore et dolore 
               magna aliqua.</p>
           </div>
