--- a/05week/transitions-and-transformations/index.html
+++ b/05week/transitions-and-transformations/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="grid-container">
         <div class="square square-1 translateX">1</div>
-        <div class="square square-2 mymove">2</div>
+        <div class="square square-2">2</div>
         <div class="square square-3 translateX">3</div>
         <div class="square square-4">4</div>
         <div class="square square-5 translateX">5</div>
