--- a/06week/Holiday_Brutalist/index.html
+++ b/06week/Holiday_Brutalist/index.html
@@ -59,6 +59,11 @@
     <div class="box box6">
       <img src="http://pngimg.com/uploads/apple_logo/apple_logo_PNG19684.png" alt="" class="box6">
     </div>
+    <div class="box box7">
+      <div class="float"></div>
+      <div class="float"></div>
+      <div class="float"></div>
+    </div>
   </div>
    
 </body>
