working on checkpoint

--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -8,10 +8,17 @@
 </head>
 <body>
   <header>
-    small heading:PhoneNumber
+    Junior Developer:JavaScript 
+    <br>
+    (210)429-6474
   </header>
   <nav>
-    Logo and Nav
+    <p class="nav">Amber Jones</p>
+    <div id="hamburger">
+      <div class="ham top"></div>
+      <div class="ham middle"></div>
+      <div class="ham bottom"></div>
+    </div>
   </nav>
   <main>
     <div class="left">
