--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -4,25 +4,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <title>Check-Point-2</title>
 </head>
 <body>
   <header>
-    Junior Developer:JavaScript 
-    <br>
-    (210)429-6474
+   <p class="header">
+     Amber Jones <br>
+     JuniorDeveloper:JavaScript
+   </p>
+   <p class="header2">
+     (210)429-6474
+   </p>
   </header>
   <nav>
-    <p class="nav">Amber Jones</p>
+    <div class="spin"></div>
+    <a href="https://amberlovescats14.github.io/web-workbook/01week/resume/" class="nav1">Resume</a>
+    <a href="https://amberlovescats14.github.io/web-workbook/02week/bio/" class="nav2">About Me</a>
     <div id="hamburger">
-      <div class="ham top"></div>
-      <div class="ham middle"></div>
-      <div class="ham bottom"></div>
+      <ul class="hamburger">
+        <li class="ham top"></li>
+        <li class="ham middle"></li>
+        <li class="ham bottom"></li>
+      </ul>
     </div>
   </nav>
   <main>
     <div class="left">
-      aCoupleCards
+      <div id="cards">
+        <div class="toparrow">
+            <i class="fas fa-arrow-circle-down fa-3x"></i>
+        </div>
+        <ul class="cards">
+          <li class="cards G">G </li>
+          <li class="cards I">I</li>
+          <li class="cards T">T</li>
+          <li class="cards H">H</li>
+          <li class="cards U">U</li>
+          <li class="cards B">B</li>
+        </ul>
+        <div class="bottomarrow">
+            <i class="far fa-arrow-alt-circle-up fa-3x"></i>
+        </div>
+      </div>
     </div>
     <div class="right">
       BoxLikeAirline
@@ -30,16 +54,16 @@
     <hr>
     <div id="grid-wrapper">
       <div class="box1">
-        Images
+        <img src="./farm.jpg" alt="" class="box1">
       </div>
       <div class="box2">
-        links
+        <img src="./face.jpg" alt="" class="box2">
       </div>
       <div class="box3">
-        more_links
+        <img src="./sit.jpg" alt="" class="box3">
       </div>
       <div class="box4">
-        <!--image with no background-->
+        <p class="box4">Love What You Do </p>
       </div>
     </div>
   </main>
