--- a/myCheckpoint-two/index.html
+++ b/myCheckpoint-two/index.html
@@ -43,13 +43,23 @@
           <li class="cards U">U</li>
           <li class="cards B">B</li>
         </ul>
+        <a href="https://github.com/amberlovescats14" class="github">clickHere</a>
         <div class="bottomarrow">
             <i class="far fa-arrow-alt-circle-up fa-3x"></i>
         </div>
       </div>
     </div>
     <div class="right">
-      BoxLikeAirline
+      <div id="rightbox">
+        <nav class="rightbox">
+          <div class="leftbox">
+              <i class="fas fa-peace fa-3x"></i>
+          </div>
+          <img src="http://pngimg.com/uploads/heart/heart_PNG51352.png" alt="" class="love">
+          <i class="fas fa-code fa-3x"></i>
+        </nav>
+        <textarea name="brutalism" id="brutalism" cols="20" rows="3">#brutalism</textarea>
+      </div>
     </div>
     <hr>
     <div id="grid-wrapper">
