--- a/myCheckpoint-two/index.html
+++ b/myCheckpoint-two/index.html
@@ -59,6 +59,19 @@
           <i class="fas fa-code fa-3x"></i>
         </nav>
         <textarea name="brutalism" id="brutalism" cols="20" rows="3">#brutalism</textarea>
+        <input type="radio" name="frontEnd" id="radio"> frontEnd 
+        <br>
+        <input type="radio" name="roundTrip" id="radio"> roundTrip
+        <br>
+        <p class="email">Send Email?</p>
+        <select name="transmission" id="transmission">
+          
+          <option value="1">Yes</option>
+          <option value="2">No</option>
+        </select>
+        <br>
+        <button>Submit</button>
+        
       </div>
     </div>
     <hr>
@@ -77,9 +90,8 @@
       </div>
     </div>
   </main>
-  <aside>Now sure what I'll put in here</aside>
   <footer>
-    more stuff
+    AmberLovesCats@gmail.com
   </footer>
 <!-- Code injected by live-server -->
 <script type="text/javascript">
