finished mycheckpoint two

--- a/myCheckpoint-two/index.html
+++ b/myCheckpoint-two/index.html
@@ -91,7 +91,7 @@
     </div>
   </main>
   <footer>
-    AmberLovesCats@gmail.com
+    AmberLovesCats14@gmail.com
   </footer>
 <!-- Code injected by live-server -->
 <script type="text/javascript">
