fixed new game button

--- a/checkpoints/checkpoint3/index.html
+++ b/checkpoints/checkpoint3/index.html
@@ -58,11 +58,12 @@
           <span>Moves</span>
         </div>
 
-        <div id = "tracker3" class = "trackers">
-          <span>Start New Game</span>
-        </div>
+        <a id = "tracker3" class = "trackers trackerbox" onClick="window.location.reload()">
+          <span>New Game</span>
+        </a>
 
       </div>
+      <footer>&copy;2018 - Lisa Umhey</footer>
 
 
   </div>
