--- a/08week/tic-tac-toe/index.html
+++ b/08week/tic-tac-toe/index.html
@@ -7,34 +7,37 @@
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Work+Sans:200" rel="stylesheet">
 </head>
 <body>
-  <header>LET'S PLAY TIC-TAC-TOE!</header>
+    <header>LET'S PLAY TIC-TAC-TOE!</header>
 
-<div id = "container">
-  <div id = "board">
-    <div class="row">
-      <div data-cell ="0"></div>
-        <!-- <div class = "mark x"></div> -->
-      <div data-cell="1"></div>
-      <div data-cell="2"></div>
+    <div id="container">
+        <div id="board">
+            <div class="row">
+                <div data-cell="0"></div>
+                <!-- <div class = "mark x"></div> -->
+                <div data-cell="1"></div>
+                <div data-cell="2"></div>
+            </div>
+            <div class="row">
+                <div data-cell="3"></div>
+                <div data-cell="4"></div>
+                <div data-cell="5"></div>
+            </div>
+            <div class="row">
+                <div data-cell="6"></div>
+                <div data-cell="7"></div>
+                <div data-cell="8"></div>
+            </div>
+        </div>
+
+        <!-- <div id="announce-winner"></div> -->
+
+        <button id="clear">Clear Board</button>
     </div>
-    <div class="row">
-      <div data-cell="3"></div>
-      <div data-cell="4"></div>
-      <div data-cell="5"></div>
+    <div id="foot-container">
+        <footer>&copy;2018 - Lisa Umhey</footer>
     </div>
-    <div class="row">
-      <div data-cell="6"></div>
-      <div data-cell="7"></div>
-      <div data-cell="8"></div>
-    </div>
-  </div>
 
-  <!-- <div id="announce-winner"></div> -->
-
-  <button id="clear">Clear Board</button>
-</div>
-
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="./script.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
