--- a/07week/dom-practice/index.html
+++ b/07week/dom-practice/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Work+Sans" rel="stylesheet">
 </head>
 <body>
   <div id = "top">
     <header id = "title">
-      <h1>Provisions</h1>
-      <h2>Welcome to Provisions, the world's smallest online grocery store.</h2>
+        <h1>PROVISIONS: world's smallest online grocery store</h1>
     </header>
 
 
@@ -97,7 +96,7 @@
 
   </main>
 
-
+    <footer>&copy;2018 - Lisa Umhey</footer>
   <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
