quick style update

--- a/07week/dom-practice/index.html
+++ b/07week/dom-practice/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Work+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Work+Sans|Amatic+SC" rel="stylesheet">
 </head>
 <body>
   <div id = "top">
