--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -4,29 +4,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
-  <title>Emilio's Portfolio</title>
+  <title>Portfolio</title>
 </head>
 <body>
   <div class="gridContainer">
-    <div class="gridItem gridItem-1">Emilio Sanchez</div>
-    <div class="gridItem gridItem-2">
-      <div>
-        <a href="#">About</a>
-        <a href="#myWork">My Work</a>
-        <a href="#contact">Contact</a>
-      </div>
+    <div class="gridItem gridItem-1">
+      EMILIO SANCHEZ
     </div>
-    <div class="gridItem gridItem-3">3</div>
+    <div class="gridItem gridItem-2">
+      <ul>
+        <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#myWork">My Work</a>
+          </li>
+          <li>
+            <a href="#contact">Contact</a>
+          </li>
+      </ul>
+    </div>
+    <div class="gridItem gridItem-3">
+      <img src="css/profile_pic.jpg" class="image1" alt="Emilio Sanchez" width="200" height="200">
+    </div>
     <div class="gridItem gridItem-4">
       <div>
-        <h2>About Emilio</h2>
-        <p>A little about me.</p>
+        <p>About Emilio</p>
+        <p>Integer tempus convallis elit id porttitor. Vestibulum suscipit neque quis pulvinar pretium. Ut quis hendrerit urna. Donec in posuere ante, in fermentum metus. Morbi porta a lacus sed condimentum. Aenean volutpat fermentum diam, ac semper felis. Lorem ipsum and all that <span>jazz...</span></p>
       </div>
     </div>
-    <div class="gridItem gridItem-5">5</div>
+    <div class="gridItem gridItem-5">
+      <img src="https://cdn2.scratch.mit.edu/get_image/gallery/1727273_200x130.png" onmouseover="this.src='https://media.giphy.com/media/Y7xbzxf0kqSqI/giphy.gif'"
+      onmouseout="this.src='https://cdn2.scratch.mit.edu/get_image/gallery/1727273_200x130.png'" alt="link-sprite" width=100 height=100>
+    </div>
     <div class="gridItem gridItem-6">
       <a name="myWork"></a>
-      <h2>My Work</h2>
+      <p>My Projects</p>
     </div>
     <div class="gridItem gridItem-7">
       <a href="https://sanchezel.github.io/web-workbook/checkpoint-one/">
@@ -54,7 +67,9 @@
     </div>
     <div class="gridItem gridItem-12">
       <a name="contact"></a>
-      <h2>Contact Info</h2>
+      <p>Contact Info:</p>
+      <a href="mailto:sanchez.emilio483@gmail.com">email</a>
+      <a href="https://github.com/SanchezEL">github</a>
     </div>
   </div>
 </body>
