troubleshooting build failure

--- a/07week/dom-practice/index.html
+++ b/07week/dom-practice/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Work+Sans:200|Amatic+SC" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Work+Sans:200|Amatic+SC" rel="stylesheet">
 </head>
 <body>
   <div id = "top">
