--- a/myCheckpoint-two/index.html
+++ b/myCheckpoint-two/index.html
@@ -85,6 +85,12 @@
       <div class="box3">
         <img src="./sit.jpg" alt="" class="box3">
       </div>
+      <div class="box5"></div>
+      <div class="box6"></div>
+      <div class="box7"></div>
+      <div class="box8"></div>
+      <div class="box9"></div>
+      <div class="box10"></div>
       <div class="box4">
         <p class="box4">Love What You Do </p>
       </div>
