revised landing page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Neil Cho Main</h1>
+    <h1>Projects I worked On</h1>
   </header>
   <div class="weekly__projects">
     <ul class="week__overview">
@@ -94,14 +94,32 @@
       </div>
       </li>
       <li class="week__item">
-        <a class="item__overlay" href="https://neilcho.github.io/web-workbook/05week/grid-project"></a>
-        <iframe src="https://neilcho.github.io/web-workbook/05week/grid-project" frameborder="0"></iframe>
+        <a class="item__overlay" href="https://neilcho.github.io/web-workbook/checkpoint-two"></a>
+        <iframe src="https://neilcho.github.io/web-workbook/checkpoint-two" frameborder="0"></iframe>
       <div class="project__meta">
         <h3>
-          <a href="https://neilcho.github.io/web-workbook/05week/grid-project">Grid-Project</a>
+          <a href="https://neilcho.github.io/web-workbook/checkpoint-two">Checkpoint-Two</a>
         </h3>
       </div>
       </li>
+      <li class="week__item">
+          <a class="item__overlay" href="https://neilcho.github.io/web-workbook/06week/brutal-website"></a>
+          <iframe src="https://neilcho.github.io/web-workbook/06week/brutal-website" frameborder="0"></iframe>
+        <div class="project__meta">
+          <h3>
+            <a href="https://neilcho.github.io/web-workbook/06week/brutal-website">Brutal Website</a>
+          </h3>
+        </div>
+        </li>
+        <li class="week__item">
+            <a class="item__overlay" href="https://neilcho.github.io/web-workbook/05week/grid-project"></a>
+            <iframe src="https://neilcho.github.io/web-workbook/05week/grid-project" frameborder="0"></iframe>
+          <div class="project__meta">
+            <h3>
+              <a href="https://neilcho.github.io/web-workbook/05week/grid-project">Grid-Project</a>
+            </h3>
+          </div>
+          </li>
     </ul>
   </div>
 </body>
