revised checkpoint-two

--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -31,7 +31,7 @@
               <a href="#">Blog</a>
             </li>
             <li>
-              <a href="#">About</a>
+              <a href="https://neilcho.github.io/web-workbook/02week/bio/">About</a>
             </li>
             <li>
               <a href="#">Get in Touch</a>
@@ -86,7 +86,7 @@
                 I hope to work for a variety of clientele rangining from individuals and small 
                 business owners to large enterprises.
             </p>
-            <a href="#">Find out more about my skills and experience</a>
+            <a href="https://neilcho.github.io/web-workbook/01week/resume/">Find out more about my skills and experience</a>
           </article>  
             <figure>
               <img src="./img/me-resized.png" alt="Photo of Neil Cho">
@@ -105,15 +105,13 @@
                   But first step is to visualize and draw the wireframes of the envisioned website.
               </p>
               <p>
-                  Do you need a prototype for your app or a live website? Do you have some 
-                  wireframes that now require a slick user interface? Do you have a design in mind 
-                  but don’t know how to create a website? Don’t know which content management tool to 
-                  choose?
+                  When you position the wireframes, decide whether to use grid, flex or both.  Keep in mind that
+                  flexbox works great along with grid and the website tends to be more responsive.
               </p>
               <p>
-                  I can help you improving your online presence.
+                  I can help you with some flexboxes and grids.
               </p>
-              <a href="/">Find out more about my approach</a>
+              <a href="#">Find out more about my approach</a>
           </article>
           <figure>
             <img src="./img/icon-services.svg" alt="Services icon">
