--- a/05week/Ericka-Portfolio/ericka-portfolio-2019.html
+++ b/05week/Ericka-Portfolio/ericka-portfolio-2019.html
@@ -32,12 +32,12 @@
             <div class="item-6">
               <div class="overlay">
                 <div class="text">
-                  ZENOSS <br> Creative Concept</div>
+                  ZENOSS <br> <strong>Creative Concept </strong> </div>
               </div>
             </div>
             <div class="item-7"> 
               <div class="overlay">
-                <div class="text">AGENCY LIFE <br>
+                <div class="text"> <strong>AGENCY LIFE</strong><br>
                   ZENOSS ||
                   RAZORFISH ||
                   SANDERS / WINGO ||
@@ -53,33 +53,33 @@
               <div class="overlay">
                 <div class="text">
                   CAMPBELL-EWALD <br>
-                  Machanical layout Design 
+                  <strong> Machanical layout Design </strong>
                 </div>
               </div>
             </div>
             <div class="item-9">
               <div class="overlay">
                 <div class="text">BALLOGY <br>
-                Creative Dirctor</div>
+                <strong> Creative Dirctor</div> </strong>
               </div>
             </div>
             <div class="item-10">
               <div class="overlay">
                 <div class="text">
-                  SANDERS/WINGO <br> Graphic Designer
+                  SANDERS/WINGO <br> <strong> Graphic Designer </strong>
                 </div>
               </div>
             </div>
             <div class="item-11">
               <div class="overlay">
-                <div class="text">GALAXZ 2018 <br> Tech Tradeshow </div>
+                <div class="text">GALAXZ 2018 <br> <strong> Tech Tradeshow Design </strong> </div>
               </div>
             </div>
             <div class="item-12">
               <div class="overlay">
                 <div class="text">
                   BRAND ID <br>
-                  Branding / Identity
+                 <strong> Branding / Identity </strong>
                 </div>
               </div>
             </div>
@@ -87,26 +87,26 @@
               <div class="overlay">
                 <div class="text">
                   FREELANCE <br>
-                  Branding / Logo Design
+                 <strong> Branding / Logo Design </strong>
                 </div>
               </div>
             </div>
             <div class="item-14">
               <div class="overlay">
                 <div class="text">BELLA GOODLIFE <br>
-                Creative Director</div>
+                <strong> Creative Director </strong> </div> 
               </div>
             </div>
             <div class="item-15">
               <div class="overlay">
                 <div class="text">
-                  TRACE MAGAZINE <br> Layout Designer 2003-2008
+                  TRACE MAGAZINE <br> <strong> Layout Designer 2003-2008 </strong>
                 </div>
               </div>
             </div>
             <div class="item-16">  
               <div class="text">
-                  <p1> SKILLS <br>
+                  <p1> <strong> SKILLS </strong> <br>
                       Photoshot |
                       Illustutor |
                       Indesign |
@@ -124,7 +124,7 @@
               <div class="overlay">
                 <div class="text">
                   I WOULD LOVE TO CHAT CONTACT ME HERE: <br>
-                  erickaherod@gmail.com
+                 <strong>erickaherod@gmail.com </strong> 
                 </div>
               </div>
             </div>
