--- a/myCheckpoint-two/index.html
+++ b/myCheckpoint-two/index.html
@@ -58,7 +58,7 @@
           <img src="http://pngimg.com/uploads/heart/heart_PNG51352.png" alt="" class="love">
           <i class="fas fa-code fa-3x"></i>
         </nav>
-        <textarea name="brutalism" id="brutalism" cols="20" rows="3">amberlovescats14@gmail.com</textarea>
+        <textarea name="brutalism" id="brutalism" cols="20" rows="3">Compose</textarea>
         <input type="radio" name="frontEnd" id="radio"> frontEnd 
         <br>
         <input type="radio" name="roundTrip" id="radio"> fullStack
