quick spell change

--- a/07week/dom-practice/index.html
+++ b/07week/dom-practice/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,7 +25,7 @@
   <main id = "store">
     <div class = "items">
       <img class = "pic" src = "./img/harshal-s-hirve-50029-unsplash (1).jpg" />
-      <h2 id = "item-one" class = "item-name">Cucumber</h2>
+      <h2 id = "item-one" class = "item-name">Cucumbers</h2>
       <p class = "description">
         Certified Organic / 1lb Carton
       </p>
@@ -34,7 +34,7 @@
 
     <div class = "items">
       <img class = "pic" src = "./img/erily-mariel-628563-unsplash.jpg" />
-      <h2 id = "item-two" class = "item-name">Tomato</h2>
+      <h2 id = "item-two" class = "item-name">Tomatoes</h2>
       <p class = "description">
         Heirloom / 1 Quart
       </p>
@@ -88,7 +88,7 @@
 
     <div class = "items">
       <img class = "pic" src = "./img/joanna-nix-384296-unsplash.jpg" />
-      <h2 id = "item-eight" class = "item-name">Pink Lady Apples</h2>
+      <h2 id = "item-eight" class = "item-name">Gala Apples</h2>
       <p class = "description">
         Grown in Washington / 5lb Bag
       </p>
