--- a/07week/dom-practice/index.html
+++ b/07week/dom-practice/index.html
@@ -63,7 +63,7 @@
       <img class = "pic" src = "./img/hello-i-m-nik-522061-unsplash.jpg" />
       <h2 id = "item-five" class = "item-name">Farm-Fresh Eggs</h2>
       <p class = "description">
-        From Cage Free Chickens / 1/2 Dozen
+      Cage Free / 1/2 Dozen
       </p>
       <input value = "add to cart" type = "button" onclick = "addDiv(&quot;item-five&quot;)"/>
     </div>
