--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -1,1 +1,26 @@
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Checkpoint Two</title>
+    <link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+    <h1>Jessica K. Pena</h1>
+    <nav>
+        <li>Home</li>
+        <li>About</li>
+        <li>Resume</li>
+        <li>Contact</li>
+    </nav>
+    <div class="image-container">
+		</div>
+	<div class="parent-container">
+		<div class="home-container">Home</div>
+		<div class="about-container">About</div>
+		<div class="resume-container">Resume</div>
+		<div class="contact-container">Contact Me</div>
+	</div>
+</body>
+</html>
