finishing up framework for checkpoint 2

--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -9,10 +9,10 @@
 <body>
     <h1>Jessica K. Pena</h1>
     <nav>
-        <li>Home</li>
-        <li>About</li>
-        <li>Resume</li>
-        <li>Contact</li>
+        <li><a href="#home">Home</a></li><br/>
+        <li><a href="#about">About</a></li><br/>
+        <li><a href="#resume">Resume</a></li><br/>
+        <li><a href="#contact">Contact</a></li><br/>
     </nav>
     <div class="image-container">
 		</div>
