finished wireframe work for checkpoint 2

--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -8,16 +8,21 @@
 </head>
 <body>
     <h1>Jessica K. Pena</h1>
-    <nav>
-        <li><a href="#home">Home</a></li><br/>
-        <li><a href="#about">About</a></li><br/>
-        <li><a href="#resume">Resume</a></li><br/>
-        <li><a href="#contact">Contact</a></li><br/>
-    </nav>
+<nav>
+    <ul>
+        <li><a href="#home">Home</a></li></br>
+        <li><a href="#about">About</a></li></br>
+        <li><a href="#resume">Resume</a></li></br>
+        <li><a href="#contact">Contact</a></li></br>
+    </ul>
+</nav>
     <div class="image-container">
 		</div>
 	<div class="parent-container">
-		<div class="home-container">Home</div>
+		<div class="home-container"> 
+			<h1>Home</h1>
+
+		</div>
 		<div class="about-container">About</div>
 		<div class="resume-container">Resume</div>
 		<div class="contact-container">Contact Me</div>
