finished wireframe work for checkpoint 2

--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -20,9 +20,7 @@
 		</div>
 	<div class="parent-container">
 		<div class="home-container"> 
-			<h1>Home</h1>
-
-		</div>
+			<h1>Home</h1></div>
 		<div class="about-container">About</div>
 		<div class="resume-container">Resume</div>
 		<div class="contact-container">Contact Me</div>
