--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  
+    <div id="wrapper">
+        <div class="cookie"  data-cookie="1"></div>
+        <div class="count" data-count="0">0</div>
+      </div>
+      
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js" integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
+          crossorigin="anonymous"></script>
+        <script src="./js/script.js"></script>
+      
 </body>
 </html>
