troubleshooting safari mobile

--- a/checkpoints/checkpoint3/index.html
+++ b/checkpoints/checkpoint3/index.html
@@ -59,7 +59,7 @@
         </div>
 
         <a id = "tracker3" class = "trackers trackerbox" onClick="window.location.reload()">
-          <span>New Game</span>
+          <p>New Game</p>
         </a>
 
       </div>
