--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <h2>Towers of Hanoi</h2>
   <div data-stack="1">
     <div data-block="100"></div>
     <div data-block="75"></div>
@@ -16,6 +17,7 @@
   </div>
   <div data-stack="3">
   </div>
+  <div class=counter>Moves: 0</div>
   <div id="announce-game-won"></div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
