completed tic-tac-toe game

--- a/08week/tic-tac-toe/index.html
+++ b/08week/tic-tac-toe/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div>
+    <h2 id="turn">X's Turn</h2>
+  </div>
   <div class="row">
     <div data-cell="0"></div>
     <div data-cell="1"></div>
@@ -23,7 +26,13 @@
   </div>
   <div id="announce-winner"></div>
   <button id="clear">Clear Board</button>
+  
+
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script
+  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+  crossorigin="anonymous"></script>
   <script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
