added content to projects

--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -7,23 +7,31 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>Jessica K. Pena</h1>
 <nav>
     <ul>
         <li><a href="#home">Home</a></li></br>
         <li><a href="#about">About</a></li></br>
-        <li><a href="#resume">Resume</a></li></br>
+				<li><a href="#resume">Education</a></li></br>
+				<li><a href="#work">Work</a></li></br>
         <li><a href="#contact">Contact</a></li></br>
     </ul>
 </nav>
-    <div class="image-container">
-		</div>
+<div class="main-flex-container">
+		<div class="image-container"></div>
+		
+
+
+
 	<div class="parent-container">
 		<div class="home-container"> 
 			<h1>Home</h1></div>
 		<div class="about-container">About</div>
 		<div class="resume-container">Resume</div>
 		<div class="contact-container">Contact Me</div>
-	</div>
+    </div>
+</div> 
 </body>
+<footer>
+	<button>Scroll Up</button>
+</footer>
 </html>
