cleaned up, updated to ES6, well commented

--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -23,7 +23,7 @@
     <div class="booking-header">
       <ul>
         <li class="plane1">
-          <img src="https://raw.githubusercontent.com/AustinCodingAcademy/ciw-workbook/master/Week-3/Team-Project-3/plane-icon.png" class="plane">
+          <span><img src="https://raw.githubusercontent.com/AustinCodingAcademy/ciw-workbook/master/Week-3/Team-Project-3/plane-icon.png" class="plane"></span>
         </li>
         <li class="hotel1">
           <img src="https://raw.githubusercontent.com/AustinCodingAcademy/ciw-workbook/master/Week-3/Team-Project-3/hotel-icon.png" class="hotel">
