--- a/checkpoints/checkpoint1/index.html
+++ b/checkpoints/checkpoint1/index.html
@@ -16,11 +16,21 @@
         <input type="text" name="search" value="Search" id="search">
       </div>
       <ul>
-        <li>Live</li>
-        <li>Now Showing</li>
-        <li>Rentals</li>
-        <li>Feed</li>
-        <li>Notebook</li>
+        <li id="live">
+          <a href="" id="live2">Live</a>
+        </li>
+        <li>
+          <a href="">Now Showing</a>
+        </li>
+        <li>
+          <a href="">Rentals</a>
+        </li>
+        <li>
+          <a href="">Feed</a>
+        </li>
+        <li>
+          <a href="">Notebook</a>
+        </li>
         <img src="" type="avatar">
         <!--sandwich menu-->
         <img src="">
