--- a/09week/customer-satisfaction/index.html
+++ b/09week/customer-satisfaction/index.html
@@ -44,7 +44,7 @@
       </div>
       <div>
         <input type="checkbox" name="checks">Emilio's work</input>
-        <input type="checkbox" name="checks">Emilio's personality</input>
+        <input type="checkbox" name="checks">Other</input>
       </div>
       <div>
         <button type="reset">Reset</button>
