more minor changes

--- a/09week/customer-satisfaction/index.html
+++ b/09week/customer-satisfaction/index.html
@@ -29,8 +29,8 @@
       </div>
       <div>
         <label for="yes/no"><br>Were you satisfied by the service</label>
-        <input type="radio" name="yes/no" value="yes">yes</input>
-        <input type="radio" name="yes/no" value="no">no</input>
+        <input type="radio" name="yes/no" value="yes">Yes</input>
+        <input type="radio" name="yes/no" value="no">No</input>
       </div>
       
       <div>
