updated towers of hanoi

--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -6,18 +6,19 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div data-stack="1">
-    <div data-block="100"></div>
-    <div data-block="75"></div>
-    <div data-block="50"></div>
-    <div data-block="25"></div>
+  <div data-stack="1" id="dropArea">
+    <div data-block="100" class="draggable"></div>
+    <div data-block="75" class="draggable"></div>
+    <div data-block="50" class="draggable"></div>
+    <div data-block="25" class="draggable"></div>
   </div>
-  <div data-stack="2">
+  <div data-stack="2" id="dropArea">
   </div>
-  <div data-stack="3">
+  <div data-stack="3" id="dropArea">
   </div>
   <div id="announce-game-won"></div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
