--- a/09week/myown-form/index.html
+++ b/09week/myown-form/index.html
@@ -29,7 +29,7 @@
 
       <div class="names">
       <label for="firstName">FirstName</label>
-      <input type="text" name="firstName" id="firstName" placeholder="Amber">
+      <input type="text" name="firstName" id="firstName" placeholder="Amber" >
       <div class="firstName-error"></div>
       <label for="lastName">LastName</label>
       <input type="text" name="lastName" id="lastName" placeholder="Jones">
@@ -63,7 +63,10 @@
   </main>
   <script src="https://cdn.jsdelivr.net/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/jquery.validation/1.15.1/jquery.validate.min.js"></script>
-  <script src="./script.js"></script>
+<!-- 
+  <script type="text/javascript" src='/jquery/jquery.min.js' ></script>
+  <script type="text/javascript" src='/JavaScriptSpellCheck/include.js' ></script>
+  <script src="./script.js"></script> -->
 
 
   <script>
