--- a/09week/myown-form/index.html
+++ b/09week/myown-form/index.html
@@ -63,10 +63,10 @@
   </main>
   <script src="https://cdn.jsdelivr.net/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/jquery.validation/1.15.1/jquery.validate.min.js"></script>
-<!-- 
+
   <script type="text/javascript" src='/jquery/jquery.min.js' ></script>
-  <script type="text/javascript" src='/JavaScriptSpellCheck/include.js' ></script>
-  <script src="./script.js"></script> -->
+
+  <script src="./script.js"></script>
 
 
   <script>
