added to my final project

--- a/extra-credit/index.html
+++ b/extra-credit/index.html
@@ -52,7 +52,7 @@
 
 
 
-    <div class="div-size header border">
+    <div class="header border">
       <div class="title border2">
         <h1>Jessica K. Pena</h1>
         <h3>Junior Web Developer</h3>
@@ -156,13 +156,13 @@
         </div>
   </div>
 </div>
-    <div class="div-size contact border">
+    <div class="contact border">
       <div class="container-fluid padding">
           <div class="row text-center padding">
             <div class="col-12">
               <h2>Lets Connect</h2>
             </div>
-            <div class="col-12 social padding">
+            <div class="col-12 social">
               <a href="#"><i class="fab fa-facebook"></i></a>
               <a href="#"><i class="fab fa-google-plus-g"></i></a>
               <a href="#"><i class="fab fa-youtube"></i></a>
@@ -177,27 +177,10 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <footer class="footer border">
-      footer
       <div class="container-fluid padding">
         <div class="row text-center">
-          <div class="col-md-4">
+          <div class="col-sm-12">
             <hr class="light">
             <h4>Contact Me</h4>
             <p>c - 210-683-9294</p>
@@ -236,8 +219,4 @@
 
 </body>
 
-
-<footer>
-	<button>Scroll Up</button>
-</footer>
 </html>
